--- a/src/main.scss
+++ b/src/main.scss
@@ -5,21 +5,21 @@
 /*
  * Settings switch
  */
-.slider-32CRPX rect[fill='white'] {
+.slider-32CRPX rect[fill="white"] {
   fill: var(--white-500);
 }
 
-.container-2nx-BQ[style*='background-color: rgb(#{$status-green-600-rgb})'] {
+.container-2nx-BQ[style*="background-color: rgb(#{$status-green-600-rgb})"] {
   background-color: var(--status-green-560) !important;
 }
-.slider-32CRPX path[fill^='rgba(#{$status-green-600-rgb}'] {
+.slider-32CRPX path[fill^="rgba(#{$status-green-600-rgb}"] {
   fill: var(--status-green-760);
 }
 
-.container-2nx-BQ[style*='background-color: rgb(#{$primary-dark-400-rgb})'] {
+.container-2nx-BQ[style*="background-color: rgb(#{$primary-dark-400-rgb})"] {
   background-color: var(--primary-dark-500) !important;
 }
-.slider-32CRPX path[fill^='rgba(#{$primary-dark-400}'] {
+.slider-32CRPX path[fill^="rgba(#{$primary-dark-400}"] {
   fill: var(--primary-dark-500);
 }
 
@@ -98,18 +98,18 @@
 }
 
 .document-1u6V3N {
-  background-image: url(svg('global/upload-document.svg'));
+  background-image: url(svg("global/upload-document.svg"));
 }
 .code-rRQnfi {
-  background-image: url(svg('global/upload-code.svg'));
+  background-image: url(svg("global/upload-code.svg"));
 }
 .image-2ssF8k {
-  background-image: url(svg('global/upload-image.svg'));
+  background-image: url(svg("global/upload-image.svg"));
 }
 
 /*
  * Text/DM channel > upload file > edit
  */
-.checkbox-f1HnKB path[fill='#{$brand-500}'] {
+.checkbox-f1HnKB path[fill="#{$brand-500}"] {
   fill: var(--brand-new-500);
 }
