--- a/src/main.scss
+++ b/src/main.scss
@@ -107,13 +107,19 @@
 }
 
 .document-1u6V3N {
-  background-image: url(svg("https://themes.ryand.ca/client/replugged-nordic/assets/global/upload-document.svg"));
+  background-image: url(svg(
+    "https://themes.ryand.ca/client/replugged-nordic/assets/global/upload-document.svg"
+  ));
 }
 .code-rRQnfi {
-  background-image: url(svg("https://themes.ryand.ca/client/replugged-nordic/assets/global/upload-code.svg"));
+  background-image: url(svg(
+    "https://themes.ryand.ca/client/replugged-nordic/assets/global/upload-code.svg"
+  ));
 }
 .image-2ssF8k {
-  background-image: url(svg("https://themes.ryand.ca/client/replugged-nordic/assets/global/upload-image.svg"));
+  background-image: url(svg(
+    "https://themes.ryand.ca/client/replugged-nordic/assets/global/upload-image.svg"
+  ));
 }
 
 /*
