--- a/src/server/app-directory.scss
+++ b/src/server/app-directory.scss
@@ -2,7 +2,9 @@
  * > [app]
  */
 .premiumIcon-3uw5J0[src="/assets/61550500acf9704ea60d48d688f07f08.svg"] {
-  content: url(svg("https://themes.ryand.ca/client/replugged-nordic/assets/server/app-directory/dollar.svg"));
+  content: url(svg(
+    "https://themes.ryand.ca/client/replugged-nordic/assets/server/app-directory/dollar.svg"
+  ));
 }
 
 /*
@@ -13,5 +15,7 @@
 }
 
 .headerSuccess-3n55Ht {
-  background-image: url(svg("https://themes.ryand.ca/client/replugged-nordic/assets/server/app-directory/success.svg"));
+  background-image: url(svg(
+    "https://themes.ryand.ca/client/replugged-nordic/assets/server/app-directory/success.svg"
+  ));
 }
