--- a/src/server/channel/stage.scss
+++ b/src/server/channel/stage.scss
@@ -7,10 +7,14 @@
 }
 
 .sparkleIcon-aHefnO[src="/assets/a4e25b25c89b862150e6eeb520e67dd5.svg"] {
-  content: url(svg("https://themes.ryand.ca/client/replugged-nordic/assets/server/channel/stage/star.svg"));
+  content: url(svg(
+    "https://themes.ryand.ca/client/replugged-nordic/assets/server/channel/stage/star.svg"
+  ));
 }
 .sparkleIcon-aHefnO[src="/assets/72db7a1fbe5d3c861fe63c26f634b5d2.svg"] {
-  content: url(svg("https://themes.ryand.ca/client/replugged-nordic/assets/server/channel/stage/cross.svg"));
+  content: url(svg(
+    "https://themes.ryand.ca/client/replugged-nordic/assets/server/channel/stage/cross.svg"
+  ));
 }
 
 /*
