--- a/src/server/settings/moderation.scss
+++ b/src/server/settings/moderation.scss
@@ -26,11 +26,17 @@
    * > audit log
    */
 .typeCreate--o_pRH:after {
-  background: url(svg("https://themes.ryand.ca/client/replugged-nordic/assets/server/settings/moderation/type-create.svg"));
+  background: url(svg(
+    "https://themes.ryand.ca/client/replugged-nordic/assets/server/settings/moderation/type-create.svg"
+  ));
 }
 .typeUpdate-34INPr:after {
-  background: url(svg("https://themes.ryand.ca/client/replugged-nordic/assets/server/settings/moderation/type-update.svg"));
+  background: url(svg(
+    "https://themes.ryand.ca/client/replugged-nordic/assets/server/settings/moderation/type-update.svg"
+  ));
 }
 .typeDelete-1AYMTg:after {
-  background: url(svg("https://themes.ryand.ca/client/replugged-nordic/assets/server/settings/moderation/type-delete.svg"));
+  background: url(svg(
+    "https://themes.ryand.ca/client/replugged-nordic/assets/server/settings/moderation/type-delete.svg"
+  ));
 }
