--- a/src/server/channel/voice.scss
+++ b/src/server/channel/voice.scss
@@ -26,7 +26,9 @@
    * > invite (when empty)
   */
 .art-3XrHCd[style*='background-image: url("/assets/ec499e7dcc451566caeda997fa9265db.svg")'] {
-  background-image: url(svg("https://themes.ryand.ca/client/replugged-nordic/assets/server/channel/voice/invite.svg")) !important;
+  background-image: url(svg(
+    "https://themes.ryand.ca/client/replugged-nordic/assets/server/channel/voice/invite.svg"
+  )) !important;
 }
 
 /*
@@ -59,5 +61,7 @@
 }
 
 .emojiPickerHeader-2mWh2T img[src="/assets/99088efd1b1b695e2b026ae6923924d2.svg"] {
-  content: url(svg("https://themes.ryand.ca/client/replugged-nordic/assets/server/channel/voice/emoji-party.svg"));
+  content: url(svg(
+    "https://themes.ryand.ca/client/replugged-nordic/assets/server/channel/voice/emoji-party.svg"
+  ));
 }
