--- a/src/server/settings/community.scss
+++ b/src/server/settings/community.scss
@@ -2,7 +2,9 @@
  * > enable community
  */
 .sparkles-1nSL9S[src="/assets/7418d03d0480ed13eed00c28584d275a.svg"] {
-  content: url(svg("https://themes.ryand.ca/client/replugged-nordic/assets/server/settings/community/stars.svg"));
+  content: url(svg(
+    "https://themes.ryand.ca/client/replugged-nordic/assets/server/settings/community/stars.svg"
+  ));
 }
 
 /*
@@ -29,20 +31,28 @@
 }
 
 .content--gAC_W img[src="/assets/070f1b98adc8ce07c7823021133efed5.svg"] {
-  content: url(svg("https://themes.ryand.ca/client/replugged-nordic/assets/server/settings/community/shield.svg"));
+  content: url(svg(
+    "https://themes.ryand.ca/client/replugged-nordic/assets/server/settings/community/shield.svg"
+  ));
 }
 .content--gAC_W img[src='/assets/d8a03b9985d824edc78c6eb4785dc949.svg'] /** (step 2) */ {
-  content: url(svg("https://themes.ryand.ca/client/replugged-nordic/assets/server/settings/community/wrench.svg"));
+  content: url(svg(
+    "https://themes.ryand.ca/client/replugged-nordic/assets/server/settings/community/wrench.svg"
+  ));
 }
 .content--gAC_W img[src='/assets/b6193b9564ca0ecbbd1ed6b80f47646d.svg'] /** (step 3) */ {
-  content: url(svg("https://themes.ryand.ca/client/replugged-nordic/assets/server/settings/community/check.svg"));
+  content: url(svg(
+    "https://themes.ryand.ca/client/replugged-nordic/assets/server/settings/community/check.svg"
+  ));
 }
 
 /*
    * > discovery
    */
 .sparkles-1JOsCC[src="/assets/89c185367e2d2dd521f4265f2b8c93ee.svg"] {
-  content: url(svg("https://themes.ryand.ca/client/replugged-nordic/assets/server/settings/community/discovery-stars.svg"));
+  content: url(svg(
+    "https://themes.ryand.ca/client/replugged-nordic/assets/server/settings/community/discovery-stars.svg"
+  ));
 }
 
 /*
