--- a/src/sidebar-left.scss
+++ b/src/sidebar-left.scss
@@ -47,14 +47,18 @@
    * > discover
    */
 .footerImage-3DpC_8[src="/assets/3ed9c7cdbea131bc485afa998a5ec93e.svg"] {
-  content: url(svg("https://themes.ryand.ca/client/replugged-nordic/assets/sidebar-left/discover.svg"));
+  content: url(svg(
+    "https://themes.ryand.ca/client/replugged-nordic/assets/sidebar-left/discover.svg"
+  ));
 }
 
 /*
    * > discover > student hub
    */
 .icon-2kPPWH {
-  background-image: url(svg("https://themes.ryand.ca/client/replugged-nordic/assets/sidebar-left/hub.svg"));
+  background-image: url(svg(
+    "https://themes.ryand.ca/client/replugged-nordic/assets/sidebar-left/hub.svg"
+  ));
 }
 
 .addButton-Jt0onL {
