--- a/src/user/settings/activity.scss
+++ b/src/user/settings/activity.scss
@@ -3,5 +3,7 @@
  ! + server settings > emoji
  */
 .default-1Tkeeg {
-  background-image: url(svg("https://themes.ryand.ca/client/replugged-nordic/assets/user/settings/activity/cross.svg"));
+  background-image: url(svg(
+    "https://themes.ryand.ca/client/replugged-nordic/assets/user/settings/activity/cross.svg"
+  ));
 }
