--- a/src/user/settings/payment.scss
+++ b/src/user/settings/payment.scss
@@ -78,7 +78,9 @@
    ! Get nitro
    */
 .warnIcon-3ly1wg {
-  background-image: url(svg("https://themes.ryand.ca/client/replugged-nordic/assets/user/settings/payment/warn.svg"));
+  background-image: url(svg(
+    "https://themes.ryand.ca/client/replugged-nordic/assets/user/settings/payment/warn.svg"
+  ));
 }
 .planOptionDiscount-2nex9n {
   color: var(--black-500);
