--- a/src/server/app-directory.scss
+++ b/src/server/app-directory.scss
@@ -1,3 +1,7 @@
+.directoryModal-YJsOMv {
+  background-color: var(--background-primary) !important;
+}
+
 /*
  * > [app]
  */
@@ -8,8 +12,15 @@
 }
 
 /*
-   * > [app] > add to server
-   */
+ * >> "premium" tab
+ */
+.button-35nmN9 {
+  color: var(--primary-700);
+}
+
+/*
+ * > [app] > add to server
+ */
 .scopeCheck-3trytX {
   color: var(--black-500);
 }
