--- a/src/hljs.scss
+++ b/src/hljs.scss
@@ -25,10 +25,10 @@
 .hljs-ansi-background-cyan,
 .hljs-ansi-background-green,
 .hljs-ansi-background-white {
-  color: var(--primary-dark-800);
+  color: var(--primary-800);
 }
 .hljs-ansi-foreground-black {
-  color: var(--primary-dark-430);
+  color: var(--primary-430);
 }
 .hljs-ansi-foreground-red {
   color: var(--nord-red);
@@ -58,10 +58,10 @@
 .hljs-ansi-foreground-white .hljs-ansi-background-yellow,
 .hljs-ansi-background-red,
 .hljs-ansi-background-blue {
-  color: var(--primary-light-160);
+  color: var(--primary-160);
 }
 .hljs-ansi-background-black {
-  background-color: var(--primary-dark-700);
+  background-color: var(--primary-700);
 }
 .hljs-ansi-background-red {
   background-color: var(--nord-orange);
@@ -91,12 +91,19 @@
 .hljs-attribute,
 .hljs-variable,
 .hljs-template-variable {
-  color: var(--header-secondary);
+  color: var(--header-secondary) !important;
 }
 
 .hljs-quote,
 .hljs-comment {
-  color: var(--primary-dark-430);
+  color: var(--primary-430) !important;
+}
+
+.theme-light .hljs-emphasis {
+  color: var(--primary-600);
+}
+.theme-dark .hljs-emphasis {
+  color: var(--primary-400);
 }
 
 .hljs-link {
@@ -111,8 +118,9 @@
 .hljs-builtin-name,
 .hljs-name,
 .hljs-tag,
-.hljs-doctag {
-  color: var(--nord-cyan);
+.hljs-doctag,
+.hljs-operator {
+  color: var(--nord-cyan) !important;
 }
 
 .hljs-selector-id {
@@ -136,15 +144,15 @@
 .hljs-function,
 .hljs-function > .hljs-title,
 .hljs-section {
-  color: var(--nord-turquoise);
+  color: var(--nord-turquoise) !important;
 }
 
 .hljs-number {
-  color: var(--nord-pink);
+  color: var(--nord-pink) !important;
 }
 
 .hljs-regexp {
-  color: var(--nord-yellow);
+  color: var(--nord-yellow) !important;
 }
 
 .hljs-string,
@@ -158,19 +166,21 @@
 
 .hljs-meta-keyword,
 .hljs-template-tag {
-  color: var(--nord-blue);
+  color: var(--nord-blue) !important;
 }
 
 .hljs-meta {
-  color: var(--nord-orange);
+  color: var(--nord-orange) !important;
 }
 
 .hljs-deletion {
-  color: var(--nord-red);
+  color: var(--white-100) !important;
+  background-color: hsl(var(--red-500-hsl) / 0.45) !important;
 }
 
 .hljs-addition {
-  color: var(--nord-green);
+  color: var(--white-100) !important;
+  background-color: hsl(var(--green-500-hsl) / 0.45) !important;
 }
 
 .hljs-title ~ .hljs-title {
@@ -199,7 +209,7 @@
 .rb .hljs-subst,
 .ruby .hljs-subst,
 .swift .hljs-subst {
-  color: var(--nord-turquoise);
+  color: var(--nord-turquoise) !important;
 }
 
 .abnf .hljs-symbol,
@@ -207,7 +217,7 @@
 .css .hljs-attribute,
 .less .hljs-attribute,
 .scss .hljs-attribute {
-  color: var(--nord-yellow);
+  color: var(--nord-yellow) !important;
 }
 
 .apache .hljs-section,
@@ -220,7 +230,7 @@
 .bash .hljs-variable,
 .ini .hljs-variable,
 .makefile .hljs-variable {
-  color: var(--nord-cyan);
+  color: var(--nord-cyan) !important;
 }
 
 .aspectj .hljs-meta,
@@ -230,7 +240,7 @@
 .java .hljs-meta,
 .swift .hljs-meta,
 .yaml .hljs-meta {
-  color: var(--nord-orange);
+  color: var(--nord-orange) !important;
 }
 
 .bnf .hljs-attribute,
@@ -238,11 +248,11 @@
 .diff .hljs-meta,
 .ebnf .hljs-attribute,
 .ldif .hljs-attribute {
-  color: var(--nord-green-blue);
+  color: var(--nord-green-blue) !important;
 }
 
 .nginx .hljs-section {
-  color: var(--nord-blue);
+  color: var(--nord-blue) !important;
 }
 
 .vim .hljs-built_in {
@@ -250,7 +260,7 @@
 }
 
 .handlebars .hljs-template-tag {
-  color: var(--header-secondary);
+  color: var(--header-secondary) !important;
 }
 
 .md .hljs-string,
