--- a/src/server/channel/home.scss
+++ b/src/server/channel/home.scss
@@ -4,14 +4,14 @@
 .theme-dark .headerBarInner-2pcZSM:after {
   background: linear-gradient(
     180deg,
-    rgba(var(--primary-dark-660-rgb), 0) 0,
+    rgba(var(--primary-660-rgb), 0) 0,
     var(--background-secondary-alt)
   ) !important;
 }
 .theme-light .headerBarInner-2pcZSM:after {
   background: linear-gradient(
     180deg,
-    rgba(var(--primary-light-160-rgb), 0) 0,
+    rgba(var(--primary-160-rgb), 0) 0,
     var(--background-secondary-alt)
   ) !important;
 }
