--- a/src/server/channel/text.scss
+++ b/src/server/channel/text.scss
@@ -1,4 +1,16 @@
 /*
+ * > input field
+ */
+.scrollableContainer-15eg7h {
+  box-shadow: 0 -1px 1px var(--background-primary);
+}
+
+.wrapper-22rqw6 /* emoji picker */ {
+  background-color: var(--background-secondary);
+  border-right: 1px solid hsl(var(--primary-900-hsl) / 0.2);
+}
+
+/*
  * > interaction
  */
 .interactive:hover {
@@ -6,15 +18,15 @@
 }
 
 /*
-   * > new messages bar
-   */
+ * > new messages bar
+ */
 .newMessagesBar-1hF-9G .barButtonBase-Sk2mdB {
   color: var(--black-500);
 }
 
 /*
-   * Text channel (empty)
-   */
+ * Text channel (empty)
+ */
 .icon-2dMhn4[style*='background-image: url("/assets/be71475205180432aaa6a89bd8ee306c.svg")'] {
   background-image: url(svg(
     "https://themes.ryand.ca/client/replugged-nordic/assets/server/channel/text/invite.svg"
@@ -36,17 +48,35 @@
 }
 
 /*
-   * Text channel (user join)
-   */
+ * Text channel (user join)
+ */
 .icon-JRJzJz[style*='background-image: url("/assets/d1382af8d9e755bc44811b1fd92990a8.svg")'] {
   background-image: url(svg(
     "https://themes.ryand.ca/client/replugged-nordic/assets/server/channel/text/join.svg"
   )) !important;
 }
 
+.userJoinSystemMessageIcon-3FQ_Mo path[fill="#{$status-green-600-hex}"] {
+  fill: var(--green-600);
+}
+
 /*
-   * > mentioned
-   */
+ * > mentioned message
+ */
 .mentioned-Tre-dv:before {
-  background-color: var(--brand-new-500);
+  background-color: var(--brand-500);
+}
+
+/*
+ * > Reaction
+ */
+.reaction-3vwAF2 {
+  border-color: var(--c-reaction-border);
+}
+
+/*
+ * > Embed
+ */
+.theme-dark .embedFull-1HGV2S {
+  border-left-color: var(--primary-500);
 }
