--- a/src/server/channel/voice.scss
+++ b/src/server/channel/voice.scss
@@ -4,27 +4,27 @@
  ! + stage bottom
  */
 .gradientContainer-phMG8d {
-  --color-rgb: var(--primary-dark-700-rgb);
+  --color-rgb: var(--primary-700-hsl);
   background-image: linear-gradient(
-    rgb(var(--color-rgb)),
-    rgba(var(--color-rgb), 0.738) 19%,
-    rgba(var(--color-rgb), 0.541) 34%,
-    rgba(var(--color-rgb), 0.382) 47%,
-    rgba(var(--color-rgb), 0.278) 56.5%,
-    rgba(var(--color-rgb), 0.194) 65%,
-    rgba(var(--color-rgb), 0.126) 73%,
-    rgba(var(--color-rgb), 0.075) 80.2%,
-    rgba(var(--color-rgb), 0.042) 86.1%,
-    rgba(var(--color-rgb), 0.021) 91%,
-    rgba(var(--color-rgb), 0.008) 95.2%,
-    rgba(var(--color-rgb), 0.002) 98.2%,
+    hsl(var(--color-rgb)),
+    hsl(var(--color-rgb) / 0.738) 19%,
+    hsl(var(--color-rgb) / 0.541) 34%,
+    hsl(var(--color-rgb) / 0.382) 47%,
+    hsl(var(--color-rgb) / 0.278) 56.5%,
+    hsl(var(--color-rgb) / 0.194) 65%,
+    hsl(var(--color-rgb) / 0.126) 73%,
+    hsl(var(--color-rgb) / 0.075) 80.2%,
+    hsl(var(--color-rgb) / 0.042) 86.1%,
+    hsl(var(--color-rgb) / 0.021) 91%,
+    hsl(var(--color-rgb) / 0.008) 95.2%,
+    hsl(var(--color-rgb) / 0.002) 98.2%,
     transparent
   );
 }
 
 /*
-   * > invite (when empty)
-  */
+ * > invite (when empty)
+*/
 .art-3XrHCd[style*='background-image: url("/assets/ec499e7dcc451566caeda997fa9265db.svg")'] {
   background-image: url(svg(
     "https://themes.ryand.ca/client/replugged-nordic/assets/server/channel/voice/invite.svg"
@@ -32,8 +32,25 @@
 }
 
 /*
-   * > screen share (step 2)
-   */
+ * > Start activity
+ */
+.tryItOutBadge-27UB1L {
+  color: var(--black-500);
+}
+
+/*
+ * > screen share (step 2)
+ */
+.theme-dark .card-m7VgZ8 {
+  border-color: var(--primary-430);
+  background-color: hsl(var(--black-500-hsl) / 0.5);
+}
+
+.theme-dark .qualitySettingsContainer-2LjkfM,
+.theme-dark .item-2OyinQ {
+  border-color: var(--primary-430);
+}
+
 .selectorTextSelected-2zup8I {
   color: var(--black-500);
 }
@@ -53,10 +70,10 @@
 }
 
 /*
-   * > react with emoji > enable fun reaction with nitro
-   */
+ * > react with emoji > "enable fun reaction with nitro" message
+ */
 .tooltipBrand-20XsMA,
-.tooltipText-1UXpqk {
+.tooltipText-2kLmrq {
   color: var(--black-500) !important;
 }
 
