--- a/src/sidebar-left.scss
+++ b/src/sidebar-left.scss
@@ -1,66 +1,95 @@
+.scroller-3X7KbA, /* servers sidebar */
+.sidebarRegionScroller-FXiQOh, /* Settings > sidebar */
+.privateChannels-oVe7HL, .scroller-WSmht3, /* DM > channels */
+.container-1NXEtd, /* Server > channels */
+.sidebar-1tnWFu, /* Discover > tabs */
+.member-48YF_l, .members-3WRCEx, .container-2o3qEW /* ! DM/Server > members sidebar */ {
+  background-color: var(--background-primary) !important;
+}
+
+.scroller-3X7KbA, /* Servers sidebar */
+.sidebar-1tnWFu, /* Server > channels */
+.sidebarRegionScroller-FXiQOh /* Settings > sidebar */ {
+  border-right: 1px solid var(--c-separator-border);
+}
+
+.wrapper-3kah-n:not(.selected-1Drb7Z) .childWrapper-1j_1ub, /* server without avatar */
+.expandedFolderBackground-1kSAf6, /* servers folder */
+.folder-241Joy:not(.hover-3m7-WT), /* server folder icon */
+.circleIconButton-1VxDrg:not(.selected-2r1Hvo), /* add and discover button */
+.panels-3wFtMD, .container-YkUktl, /* user area */
+.container-1zzFcN, /* user area (in voice) */ {
+  background-color: var(--background-secondary);
+}
+
+.folder-241Joy.hover-3m7-WT, /* server folder icon */
+.wrapper-38slSD .wrapper-3kah-n:not(.selected-1Drb7Z) .childWrapper-1j_1ub /* server (in folder) without avatar */ {
+  background-color: var(--background-modifier-hover);
+}
+
 /*
  * DM (snowsgiving)
  */
 .childWrapper-1j_1ub rect[fill="#6370f4"] {
-  fill: var(--brand-new-500);
+  fill: var(--brand-500);
 }
 .wrapper-3kah-n.selected-1Drb7Z .childWrapper-1j_1ub g[fill="var(--white-500)"] {
   fill: var(--white-100);
 }
 
 /*
-   * DM
-   * server without image
-   */
+ * DM
+ * server without image
+ */
 .wrapper-3kah-n.selected-1Drb7Z .childWrapper-1j_1ub,
 .wrapper-3kah-n:hover .childWrapper-1j_1ub {
   color: var(--black-500);
 }
 
 /*
-   * voice participating
-   */
+ * voice participating badge
+ */
 .iconBadge-32fMme.participating-2Z81oO {
   color: var(--black-500);
 }
 
 /*
-   * add server
-   * discover
-   */
+ * User area (in voice)
+ */
+.button-1EGGcP.buttonColor-3bP3fX:hover,
+.button-1EGGcP .buttonColor-3bP3fX:hover {
+  background-color: var(--background-secondary-alt);
+}
+.button-1EGGcP.buttonColor-3bP3fX.fauxDisabled-8w0hCZ,
+.button-1EGGcP .buttonColor-3bP3fX.fauxDisabled-8w0hCZ,
+.button-1EGGcP.buttonColor-3bP3fX:disabled,
+.button-1EGGcP .buttonColor-3bP3fX:disabled,
+.button-1EGGcP.buttonColor-3bP3fX,
+.button-1EGGcP .buttonColor-3bP3fX {
+  background-color: var(--c-background-secondary-alt2);
+}
+
+/* new activities */
+.defaultColor-1GKx81[style*="color: #{"" + $white-500-hex}"],
+.subheaderText-Jg7wmo[style*="color: #{"" + $white-500-hex}"] {
+  color: var(--black-500);
+}
+
+/*
+ * add server
+ * discover
+ */
 .circleIconButton-1VxDrg.selected-2r1Hvo {
   color: var(--black-500);
 }
 
 /*
-   * > add server > Customize your server ('+' image)
-   */
+ * > add server > Customize your server ('+' image)
+ */
 .iconContainer-GFfNaA circle[fill="#{$brand-500-hex}" i] {
-  fill: var(--brand-new-500);
+  fill: var(--brand-500);
 
   & + path[fill="white"] {
     fill: var(--black-500);
   }
-}
-
-/*
-   * > discover
-   */
-.footerImage-3DpC_8[src="/assets/3ed9c7cdbea131bc485afa998a5ec93e.svg"] {
-  content: url(svg(
-    "https://themes.ryand.ca/client/replugged-nordic/assets/sidebar-left/discover.svg"
-  ));
-}
-
-/*
-   * > discover > student hub
-   */
-.icon-2kPPWH {
-  background-image: url(svg(
-    "https://themes.ryand.ca/client/replugged-nordic/assets/sidebar-left/hub.svg"
-  ));
-}
-
-.addButton-Jt0onL {
-  color: var(--black-500);
 }
