--- a/src/global.scss
+++ b/src/global.scss
@@ -2,14 +2,16 @@
   background-color: hsl(var(--blue-345-hsl) / 0.25);
 }
 
-.container-2o3qEW, /* Server > member sidebar */
+@if is_uniform() {
+  .container-2o3qEW, /* Server > member sidebar */
   .members-3WRCEx /* DM > member sidebar */ {
-  border-left: 1px solid var(--c-separator-border);
+    border-left: 1px solid var(--background-secondary-alt);
+  }
 }
 
 /*
-   * Settings switch
-   */
+ * Settings switch
+ */
 .slider-HJFN2i rect[fill="white"] {
   fill: var(--white-500);
 }
@@ -22,73 +24,97 @@
 }
 
 .container-1QtPKm[style*="background-color: rgb(#{$primary-400-rgb})"] {
-  background-color: var(--primary-500) !important;
+  @if is_uniform() {
+    background-color: var(--primary-460) !important;
+  } @else {
+    background-color: var(--primary-500) !important;
+  }
 }
 .slider-HJFN2i path[fill^="rgba(#{$primary-400-rgb}"] {
-  fill: var(--primary-500);
+  @if is_uniform() {
+    fill: var(--primary-460);
+  } @else {
+    fill: var(--primary-500);
+  }
 }
 
 /*
-   * Button with brand background
-   */
+ * Settings slider
+ */
+.theme-dark .bar-2H7Q9u,
+.theme-dark .markDash-1ATsxA {
+  background-color: var(--primary-460);
+}
+.theme-light .bar-2H7Q9u,
+.theme-light .markDash-1ATsxA {
+  background-color: var(--primary-160);
+}
+
+/*
+ * Button with brand background
+ */
 .lookFilled-1H2Jvj.colorBrand-2M3O3N:not(.button-1EGGcP):not(.button-35nmN9), /** User settings */
-  .lookOutlined-3RTC7c.colorBrand-2M3O3N:hover, /** User settings > privacy & safety */
-  .lookFilled-1H2Jvj.colorBrandNew-abZT3v, /** user settings > Accessibility */
-  .premiumLabel-3HPvdB.selected-2Uns2B, /** user settings > nitro (btn) */
-  .button-2WPG1w[style*='color: rgb(#{$white-500-rgb})'], /* server settings > onboarding (check it out) */
-  .categoryItem-Kc_HK_.selectedCategoryItem-ZjqSui /** Discover */ {
+.lookOutlined-3RTC7c.colorBrand-2M3O3N:hover, /** User settings > privacy & safety */
+.lookFilled-1H2Jvj.colorBrandNew-abZT3v, /** user settings > Accessibility */
+.premiumLabel-3HPvdB.selected-2Uns2B, /** user settings > nitro (btn) */
+.button-2WPG1w[style*='color: rgb(#{$white-500-rgb})'], /* server settings > onboarding (check it out) */
+.categoryItem-Kc_HK_.selectedCategoryItem-ZjqSui /** Discover */ {
   color: var(--black-500);
 }
 
+.activeButton-LRWFC_ /* text channel > search result (pagination) */ {
+  color: var(--black-500) !important;
+}
+
 /*
-   * Button with green background
-   */
+ * Button with green background
+ */
 .lookFilled-1H2Jvj.colorGreen-jIPCAS, /** user settings > profiles */
-  .button-1EGGcP.buttonColor-3bP3fX.buttonActive-Uc1jHx, /** sidebar (connected to voice channel) > share your screen (active) */
-  .-allow-1h61-Z.selected-3jieYB /** server > channel/category settings > permissions (allow) */ {
+.button-1EGGcP.buttonColor-3bP3fX.buttonActive-Uc1jHx, /** sidebar (connected to voice channel) > share your screen (active) */
+.-allow-1h61-Z.selected-3jieYB /** server > channel/category settings > permissions (allow) */ {
   color: var(--black-500);
 }
 
 /*
-   * Dropdown menus
-   */
+ * Dropdown menus
+ */
 .colorDefault-CDqZdO .check-3HZJs4, /** checkbox + Profile Popup > status > switch account */
-  /** hover state */
-  .colorDefault-CDqZdO.focused-3qFvc8:not(.colorDanger-3n-KnP):not(.menuItemFocused-2cC4Ku), /** + Profile Popup > status > switch account */
-  .colorDefault-CDqZdO.focused-3qFvc8 .checkbox-hADx5o,
-  .colorDefault-CDqZdO.focused-3qFvc8 .radioSelection-1UHp0b,
-  .colorDefault-CDqZdO.focused-3qFvc8 .subtext-2GlkbE {
+/** hover state */
+.colorDefault-CDqZdO.focused-3qFvc8:not(.colorDanger-3n-KnP):not(.menuItemFocused-2cC4Ku), /** + Profile Popup > status > switch account */
+.colorDefault-CDqZdO.focused-3qFvc8 .checkbox-hADx5o,
+.colorDefault-CDqZdO.focused-3qFvc8 .radioSelection-1UHp0b,
+.colorDefault-CDqZdO.focused-3qFvc8 .subtext-2GlkbE {
   color: var(--black-500);
 }
 
 /*
-   * Circle checked icon
-   */
+ * Circle checked icon
+ */
 .selectedIcon-122rMx circle[fill='var(--white-500)'], /** user settings > profiles (server tab) > choose server */
-  .checkbox-1LuCGM[style*='background-color: rgb(#{$green-360-rgb})'] path[fill='var(--white-500)'], /** server > notification settings */
-  .activeIcon-1ykRnF circle[fill='var(--white-500)'], /** profile popup > status > switch account */
-  .descriptionIcon-3nDZrK circle[cx='12'][fill='var(--white-500)'], /** server settings > server template */
-  .checklistIcon-nKaK0A circle[fill='var(--white-500)'], /** server settings > enable community > get started (step 3) */
-  .-icon-2dMyvd circle[fill="var(--white-100)"] /* server settings > onboarding (check it out) */ {
+.checkbox-1LuCGM[style*='background-color: rgb(#{$green-360-rgb})'] path[fill='var(--white-500)'], /** server > notification settings */
+.activeIcon-1ykRnF circle[fill='var(--white-500)'], /** profile popup > status > switch account */
+.descriptionIcon-3nDZrK circle[cx='12'][fill='var(--white-500)'], /** server settings > server template */
+.checklistIcon-nKaK0A circle[fill='var(--white-500)'], /** server settings > enable community > get started (step 3) */
+.-icon-2dMyvd circle[fill="var(--white-100)"] /* server settings > onboarding (check it out) */ {
   fill: var(--black-500);
 }
 
 .checkmark-1lGv7h, /** server settings > onboarding (also square checkbox) */
-  .activeCircle-3rE6-u /** server settings > welcome screen */ {
+.activeCircle-3rE6-u /** server settings > welcome screen */ {
   color: var(--black-500);
 }
 
 /*
-   * Square checked icon
-   */
+ * Square checked icon
+ */
 .checked-22NTbO[style*="background-color: var(--brand-experiment-500)"]
   path[fill="var(--white-500)"] {
   fill: var(--black-500);
 }
 
 /*
-   * What's new (popup)
-   */
+ * What's new (popup)
+ */
 .content-FDHp32 a {
   color: var(--text-link);
 }
@@ -102,24 +128,28 @@
 }
 
 /*
-   * Streamer mode enabled button
-   */
+ * Streamer mode enabled button
+ */
 .streamerModeEnabledBtn-2nlJTD:hover {
   background-color: #a3759b;
 }
 
 /*
-   * Search > filter
-   */
+ * Search > filter
+ */
 .searchAnswer-23w-CH,
 .searchFilter-2UfsDk {
-  background-color: var(--background-primary) !important;
+  @if is_uniform() {
+    background-color: var(--background-secondary) !important;
+  } @else {
+    background-color: var(--background-primary) !important;
+  }
   color: var(--text-normal);
 }
 
 /*
-   * Search > date picker
-   */
+ * Search > date picker
+ */
 .calendarPicker-sDhzdi .react-datepicker__day.react-datepicker__day--keyboard-selected,
 .calendarPicker-sDhzdi .react-datepicker__day.react-datepicker__day--selected:hover,
 .calendarPicker-sDhzdi .react-datepicker__day:hover {
@@ -127,8 +157,8 @@
 }
 
 /*
-   * Text/DM channel > drop file
-   */
+ * Text/DM channel > drop file
+ */
 .uploadDropModal-13Kd20 .inner-rBP-MS {
   .title-3ChJ_v,
   .title-3ChJ_v strong,
